# WaterBot

./: .gitignore  README.md
explore_node/: CMakeLists.txt  package.xml
explore_node/src/: explore_node.cpp  types.h
localizer_cpp_node/: CMakeLists.txt  Makefile  package.xml
localizer_cpp_node/launch/: goingto.launch
localizer_cpp_node/src/: localizer_cpp_node.cpp  mcl_tools.cpp  mcl_tools.h  particle.cpp  particle.h  types.h
localizer_cpp_node/src/detention/: mcl_tools.cpp  mcl_tools.h  particle.cpp  particle.h  raycaster.cpp  temp.c  tom_2d_pf.cpp
localizer_node/: CMakeLists.txt  launch.sh  package.xml
localizer_node/src/: localizer.py  mcl_debug.py  mcl_tools.py
localizer_node/src/localizer/: CMakeLists.txt  manifest.xml  package.xml
localizer_node/src/localizer/nodes/: mcl_tools.py  no_weights.py  raycaster.py  tests.py
localizer_node/src/localizer/src/: mcl_tools.py
localizer_node/src/no_weights/nodes/: no_weights.py
localizer_node/src/raycaster-backup/: Makefile  raycaster.py
localizer_node/src/uml_mcl/: ASSIGNMENT.txt
localizer_node/src/uml_mcl/launch/: mcl.launch~
localizer_node/src/uml_mcl/nodes/: laser.py~  motor.py~
localizer_node/src/uml_mcl/share/: mcl.world~
pump_node/: CMakeLists.txt  package.xml
pump_node/include/: GPIOClass.h  WaterPump.h
pump_node/src/: GPIOClass.cpp  WaterPump.cpp  WaterPump.h  pump_node.cpp
stepper_node/: CMakeLists.txt  package.xml
stepper_node/scripts/: stepper1_node.py  stepper2_node.py
uml_mcl/launch/: mcl.launch
uml_mcl/nodes/: laser.py  motor.py
uml_mcl/share/: mcl.world  mcl.world~
waterbot_mapping/: CMakeLists.txt  mapToOdom.launch  package.xml
waterbot_mapping/include/: mapping_node.hpp
waterbot_mapping/src/: mapping_node.cpp
waterbot_msgs/: CMakeLists.txt  package.xml
waterbot_msgs/msg/: stepper.msg
(+3 files in other folders)
